[gd_scene load_steps=7 format=2]

[ext_resource path="res://font/Rocketwildness-7BB8R.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://buttons/Continue Button.tscn" type="PackedScene" id=2]
[ext_resource path="res://buttons/Back Button.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/Return_to_title_back_menu.gd" type="Script" id=4]
[ext_resource path="res://fade_in_transition/FadeIn.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 72
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="Instructions" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 708, 305 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -407.0
margin_top = 103.0
margin_right = 407.0
margin_bottom = 176.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "INSTRUCTIONS"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 216.0
margin_right = 1800.0
margin_bottom = 996.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterROw" type="HBoxContainer" parent="Menu"]
margin_right = 1680.0
margin_bottom = 780.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterROw"]
margin_right = 1680.0
margin_bottom = 780.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="Continue Button" parent="Menu/CenterROw/Buttons" instance=ExtResource( 2 )]
margin_top = 616.0
margin_bottom = 696.0

[node name="Back Button" parent="Menu/CenterROw/Buttons" instance=ExtResource( 3 )]
margin_top = 700.0
margin_bottom = 780.0

[node name="FadeIn" parent="." instance=ExtResource( 5 )]
visible = false

[connection signal="pressed" from="Menu/CenterROw/Buttons/Continue Button" to="." method="_on_Continue_Button_pressed"]
[connection signal="pressed" from="Menu/CenterROw/Buttons/Back Button" to="." method="_on_Back_Button_pressed"]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
